# fastapi-gateway

./: README.md  pyproject.toml
.github/workflows/: codeql.yml
fastapi_gateway/: __init__.py  core.py  network.py
fastapi_gateway/utils/: body.py  form.py  headers.py  query.py  request.py  response.py
fastapi_gateway_ultra/: core.py  network.py
fastapi_gateway_ultra/utils/: form.py  request.py
tests/: README.md  test.py
tests/fastapi_gateway_service/: depends.py  main.py  models.py
tests/fastapi_microservice/: main.py  models.py
