[tool.poetry]
name = "fastapi_gateway_ultra"
version = "0.1.0"
description = "FastAPI gateway for microservices."
authors = ["dotX12"]
maintainers = ["xitowzys <xitowzys@gmail.com>"]
license = "MIT License"
keywords = ["python", "fastapi", "gateway", "api", "microservice", "microservices", "server side discovery"]
readme = "README.md"
homepage = "https://github.com/xitowzys-ISZF/fastapi-gateway"
repository = "https://github.com/xitowzys-ISZF/fastapi-gateway"
include = [
    "README.md",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
ujson = "^5.5.0"
aiohttp = "^3.7.4"

[tool.poetry.group.tests.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
fastapi = "^0.95.1"
python-multipart = "^0.0.6"
uvicorn = "^0.22.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel>=0.36,<1.0", "poetry>=1.1,<2", "virtualenv==20.0.33"]
build-backend = "poetry.core.masonry.api"